--- a/Example/MXSegmentedPager/Base.lproj/Main_iPhone.storyboard
+++ b/Example/MXSegmentedPager/Base.lproj/Main_iPhone.storyboard
@@ -1,27 +1,44 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="dTo-MA-xXf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="o9c-rq-WX6">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <scenes>
-        <!--Menu View Controller-->
-        <scene sceneID="wxD-Am-WPY">
+        <!--Root View Controller-->
+        <scene sceneID="xN4-dL-yXS">
             <objects>
-                <viewController id="dTo-MA-xXf" customClass="MXMenuViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="B4S-z6-SgP"/>
-                        <viewControllerLayoutGuide type="bottom" id="a3S-Lf-TZE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="qfh-Lg-aZ7">
+                <tableViewController id="FJE-cX-rWX" customClass="MXMenuViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="pjH-Pf-vM2">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="smJ-P7-u8c" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <connections>
+                            <outlet property="dataSource" destination="FJE-cX-rWX" id="UcH-bB-ebM"/>
+                            <outlet property="delegate" destination="FJE-cX-rWX" id="rBY-8j-Yak"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="6fg-kX-tp3"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="htH-hM-tiz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="919" y="389"/>
+            <point key="canvasLocation" x="1156" y="261"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="J4n-66-rW8">
+            <objects>
+                <navigationController id="o9c-rq-WX6" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="l1S-Xk-xhx">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="FJE-cX-rWX" kind="relationship" relationship="rootViewController" id="Rb0-mr-dtc"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6D0-pX-rGd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="616" y="261"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
