--- a/Example/MXSegmentedPager/Base.lproj/Main_iPhone.storyboard
+++ b/Example/MXSegmentedPager/Base.lproj/Main_iPhone.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="5kW-UJ-8eW">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="5kW-UJ-8eW">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
     </dependencies>
     <scenes>
         <!--Example View Controller-->
@@ -10,8 +10,8 @@
             <objects>
                 <viewController id="5kW-UJ-8eW" customClass="MXExampleViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="cZj-xT-idK"/>
-                        <viewControllerLayoutGuide type="bottom" id="se7-ZO-V6O"/>
+                        <viewControllerLayoutGuide type="top" id="u8h-I1-qq1"/>
+                        <viewControllerLayoutGuide type="bottom" id="Rp1-4o-aEG"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="nvo-q8-iSL">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
@@ -22,7 +22,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NIO-oM-Nxc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="506" y="1131"/>
+            <point key="canvasLocation" x="506.00000000000006" y="1131"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
