--- a/Example/MXSegmentedPager/Base.lproj/Main.storyboard
+++ b/Example/MXSegmentedPager/Base.lproj/Main.storyboard
@@ -1,28 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="QcP-gV-0Q2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="5kW-UJ-8eW">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
     </dependencies>
     <scenes>
-        <!--Parallax View Controller-->
-        <scene sceneID="cJo-Lu-Js1">
-            <objects>
-                <viewController id="QcP-gV-0Q2" customClass="MXParallaxViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="5m7-Gd-sjF"/>
-                        <viewControllerLayoutGuide type="bottom" id="HDx-Oh-6kV"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="gVN-Wu-NSy">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="b8K-ER-PVo" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="498" y="520"/>
-        </scene>
         <!--Example View Controller-->
         <scene sceneID="Crr-va-awX">
             <objects>
@@ -40,7 +22,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NIO-oM-Nxc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="506.00000000000006" y="1131"/>
+            <point key="canvasLocation" x="487" y="985"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
